# pycline

./: .gitignore  README.md  README_zh.md  __init__.py  demo.py  pyproject.toml  requirements.txt  test.py  test_ai_generation.py  test_context_management.py
core/: __init__.py  config.py  context_manager.py  models.py  plan_mode.py  task_manager.py  tool_executor.py  types.py
docs/02_cline/: 01-overview.md  02-controller.md  03-sequence-flows.md  04-data-structures.md  05-tools-system.md  06-core-modules.md  08-plan-mode-implementation.md  09-context-management-analysis.md
docs/03_aider/: 01-overview.md  02-core-architecture.md  03-edit-system-analysis.md  04-repomap-system-analysis.md  05-git-integration-analysis.md  06-key-scenarios-workflows.md  07-pycline-improvement-recommendations.md  README.md
docs/04_pycline/: 01-architecture.md  05-strategic-improvement-plan.md  06-cline-mapping.md  07-interface-differences.md  08-implementation-summary.md  README.md
examples/: example_usage.py
experiments/: langchain_class_method_tool.py  langchain_test.py
providers/: langgraph_provider.py
pycline/: __init__.py  config.py  context_manager.py  models.py  plan_mode.py  pycline.py  repo_analyzer.py  task_manager.py  tool_executor.py  utils.py
pycline/providers/: __init__.py  langgraph_provider.py
pycline/tools/: __init__.py  base.py  command_tools.py  file_tools.py  simple_tools.py
test_project/.pycline/tasks/: task_history.json
test_project/.pycline/tasks/ce070f1d-2fd9-43dd-8ea0-72ae9cb339b2/: metadata.json
tools/: advanced_tools.py
